# orchestral-ai

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
configs/: team.yaml
configs/agents/: coding_agent.yaml  coding_agent_high.yaml  coding_agent_low.yaml  host_agent.yaml  research_agent.yaml
configs/models/: deepseek.yaml
examples/configs/agents/: coding_agent_high.yaml  coding_agent_low.yaml  host_agent.yaml
examples/prompts/: system_prompt.txt
prompts/: coding_system_prompt.txt  host_system_prompt.txt  research_system_prompt.txt  system_prompt.txt
src/: agent.py  chat_manager.py  config_resolver.py  input_handler.py  main.py  model.py  team.py  tools.py
src/configs/: team.yaml
src/configs/agents/: coding_agent.yaml  research_agent.yaml
src/configs/models/: deepseek-v4-flash.yaml  deepseek.yaml
tests/: conftest.py  test_agent.py  test_main.py  test_model.py  test_team.py  test_tools.py
